<resources>
    <string name="app_name">Semper Tibi</string>
    <string name="hello_message">Always with you</string>
    <string name="mailHint">example@mail.com</string>
    <string name="register">Register</string>
    <string name="newUserQuestion">New User</string>
    <string name="dashBoard">Dashboard</string>
    <string name="moodJournal">Mood Journal</string>
    <string name="toDoList">To-Do List</string>
    <string name="stressTracker">Stress Tracker</string>
    <string name="tips">Tips &amp; Tricks</string>
    <string name="settings">Settings</string>
    <string name="newEntry">New Entry</string>
    <string name="editEntry">Edit Entry</string>
    <string name="yourMood">Your Mood Journal</string>
    <string name="chooseDate">Please choose a Date</string>
    <string name="questionFeelings">How do you feel today?</string>
    <string name="questionHappening">What happened today?</string>
    <string name="questionAchievement">Which goals did you achieve?</string>
    <string name="exampleAnswer1">Example: When [SITUATION] happened, I felt [EMOTION].</string>
    <string name="exampleAnswer2">Example: I feel [EMOTION], because [EXPERIENCE].</string>
    <string name="exampleAnswer3">Example: I was able to [ACHIEVEMENT].</string>
    <string name="newMeasurePSS">Measurement PSS</string>
    <string name="newMeasureHRV">Measurement HRV</string>
    <string name="learnMore">Learn more about Stress Tracker</string>
    <string name="stressLevel">Your Stress-Level</string>
    <string name="heartRate">Detect heart rate</string>
    <string name="testStressPSS">Stress Test with PSS</string>
    <string name="answerQuestions">Please answer the following 10 questions</string>
    <string name="lastMonth">In the last month, how often have you </string>
    <string name="answerPSS1">Never</string>
    <string name="answerPSS2">Almost never</string>
    <string name="answerPSS3">Sometimes</string>
    <string name="answerPSS4">Fairly often</string>
    <string name="answerPSS5">Very often</string>
    <string name="heartRateTest">Check your stress level with your heart rate</string>
    <string name="whatPSS">What is a stress test PSS?</string>
    <string name="explainPSS">The Perceived Stress Scale (PSS) is the most widely used psychological instrument for measuring the perception of stress. \nIt is a measure of the degree to which situations in one’s life are appraised as stressful. Items were designed to tap how unpredictable, uncontrollable, and overloaded respondents find their lives. The scale also includes a number of direct queries about current levels of experienced stress. \nThe items are easy to understand, and the response alternatives are simple to grasp. Moreover, the questions are of a general nature and hence are relatively free of content specific to any subpopulation group.\nThe questions in the PSS ask about feelings and thoughts during the last month.</string>
    <string name="whatHRV">What is a stress test HRV?</string>
    <string name="explainHRV">Heart Rate Variability (HRV) is a measure of the variation in time between successive heartbeats. A higher HRV indicates that the body\'s autonomic nervous system is functioning well and the body is better equipped to handle stress.\n The resulting stress score is displayed as a number from 0 to 100, with a lower number indicating a lower stress state. \nYou are required to stand to take the HRV stress test, because that makes the test more sensitive to low and medium levels of stress. When you are lying down, moderate levels of stress may not be revealed, but standing puts a slight load on your cardiovascular system. That load causes a meaningful drop in HRV when you have a moderate amount of stress compared to very low stress.</string>
    <string name="start">Start</string>
    <string name="tipsHeader">Tips &amp; Tricks for your mental health</string>
    <string name="breaks">Make breaks</string>
    <string name="tipBreak">Click <a href="https://thewellbeingthesis.org.uk/foundations-for-success/importance-of-taking-breaks-and-having-other-interests/">here</a> to read more about the importance of breaks in our daily wellbeing.\n\nPlease start the video below. It shows a meditation guide with relaxing music. Close your eyes and take a break…</string>
    <string name="breath">Breath</string>
    <string name="tipBreath">Breathing evokes the relaxation response from our body.\n\nPlease click <a href="https://www.health.harvard.edu/mind-and-mood/relaxation-techniques-breath-control-helps-quell-errant-stress-response">here</a> for more information.</string>
    <string name="sports">Sports</string>
    <string name="tipSports">Sports calm your mind, strengthen your muscles, and improve your overall well-being. There are a lot of ways to relieve stress with sports. Click <a href="https://www.runtastic.com/blog/en/exercise-against-stress/">here</a> or <a href="https://www.health.harvard.edu/staying-healthy/exercising-to-relax">here</a> to find out more.</string>
    <string name="plans">Plans</string>
    <string name="tipPlan">It’s important to keep making plans – even if they turn out to be pointless.\n\nClick <a href="https://www.wikihow.health/Develop-a-Plan-to-Manage-Stress">here</a> to find in detail how to set up a plan to manage stress.</string>
    <string name="nutrition">Nutrition</string>
    <string name="tipNutrition">Nutrition can manage your stress \n\n
    • Eat regularly \n
    • Get your unsaturated fats \n
    • Eat your veggies \n
    • Add high-fiber foods \n
    • Trade caffeine for more sleep \n
    • Stock up on nutrient-dense snacks \n\n
For more information click <a href="https://campushealth.unc.edu/health-topic/nutrition-and-stress/">here</a> </string>
    <string name="gender">Gender</string>
    <string name="userName">User Name</string>
    <string name="password">Password</string>
    <string name="passwordRepeat">Repeat password</string>
    <string name="mail">E-Mail address</string>
    <string name="saveChanges">Save changes</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="lotus">Logo of Semper Tibi that shows a blue lotus flower</string>
    <string name="title_activity_mood_journal_overview">MoodJournalOverview</string>
    <string name="signOut">Sign out</string>
    <string name="logoString">Logo of semper tibi</string>
    <string-array name="gender_identity">
        <item>Woman</item>
        <item>Man</item>
        <item>Transgender</item>
        <item>Non-binary</item>
        <item>Non-conforming</item>
        <item>Prefer not to respond</item>
    </string-array>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a user? Click here to Login</string>
    <string name="edit">Edit</string>
    <string name="moodTracker">Mood Tracker</string>
    <string name="submit">Submit</string>
    <string name="happy">😊 Happy</string>
    <string name="sad">😔 Sad</string>
    <string name="angry">😠 Angry</string>
    <string name="surprised">😲 Surprised</string>
    <string name="scared">😱 Scared</string>
    <string name="disgusted">🤢 Disgusted</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="hintPSS"><b>Note:</b>\n\nThe PSS score is divided into the categories low, medium and high stress with the following allocation:\n\n
        • <b>Low:</b> Scores 0–13 \n
        • <b>Medium:</b> Scores 14–26 \n
        • <b>High:</b> Scores 27–40 \n\nFor more information about the PSS Score click <a href="https://www.corc.uk.net/outcome-experience-measures/perceived-stress-scale-pss-10/">here</a>
    </string>
    <string name="channel_name">SemperTibi Reminder</string>
    <string name="faq_stress_tracker">FAQ Stress Tracker</string>
    <string name="question_1_x">Question: 1/x</string>
    <string name="button_explanation_PSSTest">Button to get the next question. After finishing the 9th question, button is set to finish.</string>
    <string name="next">Next</string>
    <string name="stress_level">Stress Level</string>
    <string name="arrow_PSS_Score">This arrow moves along a bar to show the PSS Score between 0 and 40</string>
    <string name="button_explanation_restart">Button to restart your PSS Test</string>
    <string name="restart_test">Restart Test</string>
    <string name="button_explanation_save_results">Button to save your results</string>
    <string name="save_results">Save Results</string>
    <string name="notifications">Notifications</string>
    <string name="show_off">OFF</string>
    <string name="show_on">ON</string>
    <string name="select_a_gender">Select a Gender</string>
    <string name="button_to_register">Button to register. Press after registration form is completed.</string>
    <string name="button_to_save">Button to save user changes.</string>
    <string name="user_info_HRV">Dear user, \n\nthis page is under construction. \nThank you for using SemperTibi. \n\nWish you a nice day 😊\n\nTime for a <a href="https://pbs.twimg.com/media/DNp_ZOIVAAA7wQh?format=jpg&amp;name=large">joke?</a></string>
    <string name="stress_level_head">Stress Level:</string>
    <string name="forgot_password">Forgot Password? Click <u>here</u></string>
    <string name="change_security_questions">Click <u>here</u> to change the security questions</string>
    <string name="reset_password_info">Please enter your e-mail address to reset your password</string>
    <string name="reset_password">Reset Password</string>
    <string name="button_to_reset_password_info">Button to reset the password. Press to reset password.</string>
    <string name="save_entry">Save entry</string>
    <string name="button_save_moodJournal">Button to save your input in the Mood Journal</string>
    <string name="journal">Journal</string>
    <string name="tracker">Tracker</string>
    <string name="security_questions">Security Questions</string>
    <string name="answer_security_questions">Please answer following four questions due to security reasons. Thank you</string>
    <string name="update_security_questions">Please do not change, if answers are still valid. Thank you</string>
    <string name="answer_security_check">Please answer following two questions to enter the app</string>
    <string name="button_to_save_security_info">Button to save the security questions and answers.</string>
    <string name="save_answers">Save answers</string>
    <string name="security_question_1">What was the name of the street where you grew up?</string>
    <string name="security_question_2">What is the maiden name of your mother?</string>
    <string name="security_question_3">What is your favorite movie?</string>
    <string name="security_question_4">What is your favorite color?</string>
    <string name="enter_answer_here">Please enter your answer here</string>
    <string name="your_daily_quote">Your daily quote</string>
    <string name="todo_title_hint">Title of your To-Do Item</string>
    <string name="todo_description_hint">Describe the To-Do Item</string>
    <string name="button_add_todo">Add to my list</string>
    <string name="checkbox_completed">Todo Completed</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="delete_icon">Delete Icon, swipe to delete</string>
    <string name="toDoListItem">Change To-Do</string>
    <string name="edit_icon">Edit the entry by swiping left</string>
    <string name="to_dos">To-Dos</string>
    <string name="last_7_mood_entries">Last 7 mood entries</string>
    <string name="last_mood_entries">Here you can see your last mood entries (max. 7)</string>
</resources>