<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/anti_flash_white"
    tools:context=".StressTestPSS">

    <include
        android:id="@+id/topAppBar8"
        layout="@layout/top_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/topAppBar8"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top|center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvPSS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/testStressPSS"
                android:textColor="@color/logo_font"
                android:textSize="34sp"
                android:textStyle="bold" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                app:dividerColor="@color/lotus_blue"
                app:dividerThickness="3dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="@string/answerQuestions"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvQuestionCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Question: 1/x"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tvQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="@string/lastMonth"
                android:textAlignment="center"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp">

                <RadioButton
                    android:id="@+id/radio_button_1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/answerPSS1"/>

                <RadioButton
                    android:id="@+id/radio_button_2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/answerPSS2" />

                <RadioButton
                    android:id="@+id/radio_button_3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/answerPSS3" />

                <RadioButton
                    android:id="@+id/radio_button_4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/answerPSS4" />

                <RadioButton
                    android:id="@+id/radio_button_5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/answerPSS5" />
            </RadioGroup>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


    <Button
        android:id="@+id/btNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nestedScrollView"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:contentDescription="Button to register. Press after registration form is completed."
        android:text="Next"
        android:textColor="@color/gray"
        android:textSize="24sp"
        tools:ignore="TextContrastCheck"
        android:onClick="checkAnswersPSS"/>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:scaleType="centerInside"
        android:src="@drawable/lotus" />

</RelativeLayout>